k8s/haruspex-staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haruspex
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: haruspex-staging-ksa
      containers:
        - name: haruspex
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: haruspex-staging-secrets
